starting fix bug with white screen on mobiles

--- a/shared/ui/PixelizedImg/index.module.scss
+++ b/shared/ui/PixelizedImg/index.module.scss
@@ -14,7 +14,7 @@
   // border-radius: var(--br);
 
   img {
-    display: none
+    // display: none
   }
 
 
